# TriMIDI

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: drawFunctions.cpp  drawFunctions.hpp  main.cpp  readFunctions.hpp  synthesis.hpp  windows.hpp
